# hackmyskills

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validate-content.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-02-SUMMARY.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-core-quiz/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-gamification-adaptive-difficulty/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-interrupt-daemon/: 04-01-SUMMARY.md  04-02-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-ai-content-generation/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-content-bank-polish/: 06-02-SUMMARY.md  06-03-PLAN.md  06-RESEARCH.md  06-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: content-generation-guide.md
src/hms/: cli.py  config.py  db.py  gamification.py  init.py  loader.py  models.py  quiz.py  scheduler.py  validation.py
src/hms/content/: __init__.py  aws.yaml  bash.yaml  (+3 more)
tests/: conftest.py  test_cli.py  test_content_bank.py  test_daemon.py  test_gamification.py  test_init.py  test_loader.py  test_models.py  test_quiz.py  test_scheduler.py  test_validation.py
(+41 files in other folders)
