[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hackmyskills"
version = "0.1.0"
description = "Spaced-repetition CLI for DevOps engineers"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "peewee>=4.0.1",
    "fsrs>=6.3.1",
    "pyyaml>=6.0",
    "readchar>=4.0",
    "apscheduler>=3.11,<4",
    "desktop-notifier>=6.0",
    "psutil>=6.0",
]

[project.scripts]
hms = "hms.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hms"]

[tool.hatch.build.targets.wheel.force-include]
"src/hms/content" = "hms/content"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"
